--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -25,6 +25,9 @@ ECL 0.9f
 
  - "+nan" is no longer parsed as a number.
 
+ - Where available, ECL now uses _setjmp/_longjmp for control structures. These
+   functions are faster, as they do not save signals.
+
 * Foreign function interface (FFI):
 
  - ext:c-uint-max and ext:c-ulong-max did not have the right bignum value.
