--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -32,6 +32,8 @@ ECL 0.9f
    of 10.0l0, some of which (in particular 10^512) were not required and
    overflowed the machine accuracy.
 
+ - make_stream_from_fd() did not accept smm_io.
+
 * Foreign function interface (FFI):
 
  - ext:c-uint-max and ext:c-ulong-max did not have the right bignum value.
@@ -47,6 +49,8 @@ ECL 0.9f
 	> (funcall * 2)
 	4
 	5
+
+ - C-INLINE forms are now understood by the walker in clos/walk.lsp
 
 * Visible changes:
 
