--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -37,6 +37,9 @@ ECL 0.9f
  - Globals declared with DEFPARAMETER toplevel forms were not recognized by
    the compiler as special variables.
 
+ - Fixed the optimizer for slot access, which now only operates if the
+   variables have been declared of type STANDARD-OBJECT.
+
 * Foreign function interface (FFI):
 
  - ext:c-uint-max and ext:c-ulong-max did not have the right bignum value.
@@ -121,6 +124,8 @@ ECL 0.9f
    for computing effective slot definitions from direct ones, and the methods
    DIRECT/EFFECTIVE-SLOT-DEFINITION-CLASS. (Position field in slot-def. objects
    still missing).
+
+ - CLASS-PROTOTYPE is now only a reader.
 
 * Contributed modules:
 
