--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -102,6 +102,11 @@ ECL 0.9f
    OUTPUT-P, OPEN-P}. Care has been taken to ensure compatibility with previous
    versions of ECL.
 
+ - The configuration and build process have been cleaned, making it closer to
+   GNU guidelines and improving things like naming of variables. The flags
+   --with-system-{gmp,boehm} now take an optional argument which can be "auto",
+   for automatic detection of the libraries (M. Pasternacki).
+
 * ANSI Compatibility:
 
  - DEFSETF forms are enclosed in a block with the name of the accessor.
