--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -123,6 +123,10 @@ ECL 0.9f
 
  - When *PRINT-READABLY*=T, vectors just print as arrays.
 
+ - When used as macro characters, upper and lowercase letters share the same
+   dispatcher, so that if the user defines a dispatcher for #f, it is
+   automagically set for #F and viceversa.
+
 * MOP Compatibility:
 
  - We have implemented the *-SLOT-DEFINITION classes, as well as the protocol
