--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -42,6 +42,8 @@ ECL 0.9f
 
  - Pipes are now opened in character mode (M. Pasternacki)
 
+ - (DOCUMENTATION 'F 'FUNCTION) did not work with generic functions.
+
 * Foreign function interface (FFI):
 
  - ext:c-uint-max and ext:c-ulong-max did not have the right bignum value.
