--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -126,6 +126,9 @@ ECL 0.9f
  - By default, the size of binary streams is rounded to a multiple of 8. If you
    want other behavior, pass :USE-HEADER-P T to the function OPEN.
 
+ - ECL now accepts a double dash, '--', as a command line option. Anything
+   after the double dash is interpreted as a lisp command.
+
 * ANSI Compatibility:
 
  - DEFSETF forms are enclosed in a block with the name of the accessor.
