--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -60,6 +60,8 @@ ECL 0.9f
  - Values of MOST-POSTIVE-LONG-FLOAT, and similar constants, are now taken from
    the float.h header, instead of referencing the lisp variables themselves.
 
+ - A typo made the check for proper tail recursion always succeed.
+
 * Foreign function interface (FFI):
 
  - ext:c-uint-max and ext:c-ulong-max did not have the right bignum value.
