--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -5,7 +5,21 @@ ECL 0.9g
 
  - Fixed the flags used when linking ECL against the shared library on Mac OSX.
 
+* Errors fixed:
+
+ - Now .o files compiled with :SYSTEM-P T with dash in filename load
+   correctly. (M. Pasternacki)
+
 * Foreign function interface (FFI):
+
+ - Added nickname UFFI for FFI package; functions ALLOCATE-FOREIGN-STRING,
+   WITH-FOREIGN-STRING, WITH-FOREIGN-STRINGS, and FOREIGN-STRING-LENGTH are now
+   exported. (M. Pasternacki)
+
+ - Ecl now accepts :CSTRING UFFI primitive type. (M. Pasternacki)
+
+ - DEF-FOREIGN-VAR rewritten to make variables visible from other files and to
+   dereference also arrays and pointers. (M. Pasternacki)
 
 ;;; Local Variables: ***
 ;;; mode:text ***
