--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -21,6 +21,9 @@ ECL 0.9g
  - Generated C functions now have readable names corresponding to appropriate
    Lisp function names (M. Pasternacki)
 
+ - ECL now compiles with the free Microsoft Visual C++ Toolkit
+   2003. Instructions are provided on how to do it.
+
 * Errors fixed:
 
  - Now .o files compiled with :SYSTEM-P T with dash in filename load
