Bugs fixed:  - After (REQUIRE 'CMP) the module was not registered  - Provide MAKE-LOAD-FORM for some builtin objects (to be improved)  - FOREIGN-DATA was not recognized as a type by SUBTYPEP  - Documentation of functions not found by DOCUMENTATION

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -48,9 +48,13 @@ ECL 0.9g
  - The random number generator assumed 32-bit integers.
 
  - ext:run-program looks into *standard-input/output* and *error-output* for handle
-   duplication also under Win32.
- 
- - FEtype_error_index() had format arguments in wrong order (M. Goffioul).
+   duplicatio also under Win32.
+
+ - In the LOOP macro, variables are initialized with values of their type, no
+   longer producing code like (LET ((C NIL)) (DECLARE (CHARACTER C)) ...)
+
+ - The compiler now advertises itself with PROVIDE so that issuing (REQUIRE
+   'CMP) twice does not cause the compiler to be loaded twice.
 
 * ANSI compatibility:
 
