--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -51,7 +51,9 @@ ECL 0.9g
  - The random number generator assumed 32-bit integers.
 
  - ext:run-program looks into *standard-input/output* and *error-output* for handle
-   duplicatio also under Win32.
+   duplication also under Win32.
+
+ - FEtype_error_index() had format arguments in wrong order (M. Goffioul).
 
  - In the LOOP macro, variables are initialized with values of their type, no
    longer producing code like (LET ((C NIL)) (DECLARE (CHARACTER C)) ...)
