- Cross-compilation now uses ecl_min instead of ecl, which is now installed by    default. (M. Pasternacki)

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -8,6 +8,9 @@ ECL 0.9g
  - Based on version 6.5 of Boehm-Weiser garbage collector, which fixes some
    problems related to the OSX port.
 
+ - Cross-compilation now uses ecl_min instead of ecl, which is now installed by
+   default. (M. Pasternacki)
+
 * Foreign function interface (FFI):
 
  - Added nickname UFFI for FFI package; functions ALLOCATE-FOREIGN-STRING,
