--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -43,6 +43,8 @@ ECL 0.9g
    to load files with strange extensions (.fas, .fasl, etc) as binary files and
    only if this fails, use the source-file loader.
 
+ - .LSP/.LISP are now recognized lisp source extensions.
+
 * Errors fixed:
 
  - Now .o files compiled with :SYSTEM-P T with dash in filename load
