--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -99,6 +99,9 @@ ECL 0.9g
 
  - The syntax of #\: can now be changed.
 
+ - Adjusting displaced bit-vectors failed to take the displace-offset into
+   account.
+
 * ANSI compatibility:
 
  - Several functions that signaled type-errors did not set the right values
