Several improvements related to inline of logical and cons functions, hardcoding frequently used symbols and a smaller version of TIME

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -48,6 +48,8 @@ ECL 0.9g
 
  - .LSP/.LISP are now recognized lisp source extensions.
 
+ - We now provide inline expansions for all logical operators.
+
 * Errors fixed:
 
  - Now .o files compiled with :SYSTEM-P T with dash in filename load
