--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -112,6 +112,10 @@ ECL 0.9g
  - Variable SI::*GC-VERBOSE* controls whether ECL emits messages when FASL
    libraries are garbage colleced.
 
+ - Values of EQL specializers are now evaluated in the lexical environment
+   in which the DEFMETHOD is enclosed. This makes it now possible to write
+	(defmethod foo (x) (defmethod bar ((f (eql x)))))
+
 * ANSI compatibility:
 
  - Several functions that signaled type-errors did not set the right values
