--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -116,6 +116,8 @@ ECL 0.9g
    in which the DEFMETHOD is enclosed. This makes it now possible to write
 	(defmethod foo (x) (defmethod bar ((f (eql x)))))
 
+ - Fixes in the C code to comply with gcc 4.0.
+
 * ANSI compatibility:
 
  - Several functions that signaled type-errors did not set the right values
